--- a/FameSmartApp/Base.lproj/Main.storyboard
+++ b/FameSmartApp/Base.lproj/Main.storyboard
@@ -3797,21 +3797,21 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="102" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kVT-Tw-edx">
-                                <rect key="frame" x="30" y="20" width="540" height="580"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="102" id="BXe-14-v2w" customClass="UITableViewCell2" customModule="米居" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="540" height="102"/>
+                                        <rect key="frame" x="0.0" y="28" width="600" height="102"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="BXe-14-v2w" id="t4a-f2-9c2">
-                                            <rect key="frame" x="0.0" y="0.0" width="540" height="102"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="102"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" tag="22" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="gas_03.png" translatesAutoresizingMaskIntoConstraints="NO" id="DXR-oq-NNF">
-                                                    <rect key="frame" x="20" y="10" width="65" height="65"/>
+                                                    <rect key="frame" x="35" y="10" width="72" height="72"/>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="客厅空气传感器" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRu-yT-5Ar">
-                                                    <rect key="frame" x="15" y="72" width="109" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="客厅空气传感器" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sRu-yT-5Ar">
+                                                    <rect key="frame" x="5" y="87" width="120" height="20"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="120" id="0rh-t4-Avm"/>
                                                         <constraint firstAttribute="height" constant="20" id="EEu-yb-QBQ"/>
@@ -3821,14 +3821,14 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="socket_06.png" translatesAutoresizingMaskIntoConstraints="NO" id="xXN-AG-IYH">
-                                                    <rect key="frame" x="432" y="28" width="100" height="40"/>
+                                                    <rect key="frame" x="472" y="28" width="100" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="bCH-TI-CTL"/>
                                                         <constraint firstAttribute="width" constant="100" id="hMX-Ap-CGD"/>
                                                     </constraints>
                                                 </imageView>
                                                 <button opaque="NO" tag="40" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ul7-RD-tHr" customClass="UIButton2" customModule="米居" customModuleProvider="target">
-                                                    <rect key="frame" x="482" y="28" width="50" height="40"/>
+                                                    <rect key="frame" x="522" y="28" width="50" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="50" id="iJT-Yi-NCe"/>
                                                         <constraint firstAttribute="height" constant="40" id="vwR-FX-Otu"/>
@@ -3841,7 +3841,7 @@
                                                     </connections>
                                                 </button>
                                                 <button opaque="NO" tag="30" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NJ5-H6-xMk" customClass="UIButton2" customModule="米居" customModuleProvider="target">
-                                                    <rect key="frame" x="428" y="31" width="50" height="40"/>
+                                                    <rect key="frame" x="472" y="31" width="50" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="40" id="M9x-pU-ZDE"/>
                                                         <constraint firstAttribute="width" constant="50" id="hGR-u6-svW"/>
@@ -3856,16 +3856,16 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="NJ5-H6-xMk" firstAttribute="top" secondItem="t4a-f2-9c2" secondAttribute="topMargin" constant="23" id="3AM-xL-J62"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="ul7-RD-tHr" secondAttribute="trailing" id="5bH-bm-xKy"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="ul7-RD-tHr" secondAttribute="trailing" constant="20" id="5bH-bm-xKy"/>
                                                 <constraint firstItem="ul7-RD-tHr" firstAttribute="top" secondItem="t4a-f2-9c2" secondAttribute="topMargin" constant="20" id="BAy-k2-9ag"/>
                                                 <constraint firstItem="DXR-oq-NNF" firstAttribute="width" secondItem="t4a-f2-9c2" secondAttribute="width" multiplier="0.12" id="H9N-JG-zUo"/>
                                                 <constraint firstItem="sRu-yT-5Ar" firstAttribute="top" secondItem="DXR-oq-NNF" secondAttribute="bottom" constant="5" id="PSC-A7-ASJ"/>
                                                 <constraint firstItem="DXR-oq-NNF" firstAttribute="height" secondItem="t4a-f2-9c2" secondAttribute="width" multiplier="0.12" id="atc-Fb-nfW"/>
-                                                <constraint firstItem="sRu-yT-5Ar" firstAttribute="leading" secondItem="t4a-f2-9c2" secondAttribute="leading" id="e2d-D5-gGS"/>
-                                                <constraint firstItem="ul7-RD-tHr" firstAttribute="leading" secondItem="NJ5-H6-xMk" secondAttribute="trailing" constant="4" id="isg-ha-ZFR"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="xXN-AG-IYH" secondAttribute="trailing" id="q8h-UV-P30"/>
+                                                <constraint firstItem="sRu-yT-5Ar" firstAttribute="leading" secondItem="t4a-f2-9c2" secondAttribute="leading" constant="5" id="e2d-D5-gGS"/>
+                                                <constraint firstItem="ul7-RD-tHr" firstAttribute="leading" secondItem="NJ5-H6-xMk" secondAttribute="trailing" id="isg-ha-ZFR"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="xXN-AG-IYH" secondAttribute="trailing" constant="20" id="q8h-UV-P30"/>
                                                 <constraint firstItem="xXN-AG-IYH" firstAttribute="top" secondItem="t4a-f2-9c2" secondAttribute="topMargin" constant="20" id="rLE-JG-wvq"/>
-                                                <constraint firstItem="DXR-oq-NNF" firstAttribute="leading" secondItem="t4a-f2-9c2" secondAttribute="leading" constant="20" id="rs2-Em-KqP"/>
+                                                <constraint firstItem="DXR-oq-NNF" firstAttribute="leading" secondItem="t4a-f2-9c2" secondAttribute="leading" constant="35" id="rs2-Em-KqP"/>
                                                 <constraint firstItem="DXR-oq-NNF" firstAttribute="top" secondItem="t4a-f2-9c2" secondAttribute="top" constant="10" id="svx-By-3ZT"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -3882,8 +3882,8 @@
                         <constraints>
                             <constraint firstItem="4x1-6T-yse" firstAttribute="leading" secondItem="mB8-Rd-0kK" secondAttribute="leading" id="0w1-jA-ndZ"/>
                             <constraint firstItem="kVT-Tw-edx" firstAttribute="top" secondItem="yXt-62-jaa" secondAttribute="bottom" id="6x3-7V-uTM"/>
-                            <constraint firstAttribute="trailing" secondItem="kVT-Tw-edx" secondAttribute="trailing" constant="30" id="NI9-Hh-MZ4"/>
-                            <constraint firstItem="kVT-Tw-edx" firstAttribute="leading" secondItem="mB8-Rd-0kK" secondAttribute="leading" constant="30" id="NTJ-NV-yBh"/>
+                            <constraint firstAttribute="trailing" secondItem="kVT-Tw-edx" secondAttribute="trailing" id="NI9-Hh-MZ4"/>
+                            <constraint firstItem="kVT-Tw-edx" firstAttribute="leading" secondItem="mB8-Rd-0kK" secondAttribute="leading" id="NTJ-NV-yBh"/>
                             <constraint firstItem="4x1-6T-yse" firstAttribute="top" secondItem="mB8-Rd-0kK" secondAttribute="top" id="dfG-iz-l4C"/>
                             <constraint firstAttribute="trailing" secondItem="4x1-6T-yse" secondAttribute="trailing" id="gBj-PS-FsU"/>
                             <constraint firstItem="ZkZ-Hx-BqD" firstAttribute="top" secondItem="4x1-6T-yse" secondAttribute="bottom" id="gFW-TQ-uKH"/>
@@ -3922,7 +3922,7 @@
                                 <color key="textColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ug/M3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIx-xF-OjY">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ug/M³" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIx-xF-OjY">
                                 <rect key="frame" x="350" y="60" width="80" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="CM2-ap-AtR"/>
@@ -4398,7 +4398,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ug/M3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kK1-ea-yIN">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ug/M³" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kK1-ea-yIN">
                                         <rect key="frame" x="360" y="14" width="120" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="RO6-Kf-TlL"/>
@@ -4449,7 +4449,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mg/M3" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ct8-kL-a0R">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mg/M³" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ct8-kL-a0R">
                                         <rect key="frame" x="360" y="14" width="120" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="fEe-cl-5mm"/>
@@ -4500,7 +4500,7 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="C" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IU8-wi-S52">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ºC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IU8-wi-S52">
                                         <rect key="frame" x="360" y="14" width="120" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="p4O-Nf-saj"/>
