--- a/FameSmartApp/Base.lproj/Main.storyboard
+++ b/FameSmartApp/Base.lproj/Main.storyboard
@@ -528,11 +528,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="loginpanel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="HSe-60-MR8">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginpanel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="HSe-60-MR8">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cEG-DI-X5z">
-                                <rect key="frame" x="16" y="20" width="568" height="580"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Rlo-8b-aW1">
+                                <rect key="frame" x="0.0" y="64" width="590" height="90"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="检测记录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5l9-Dw-gfh">
+                                        <rect key="frame" x="30" y="35" width="100" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="100" id="EDk-vO-Fhd"/>
+                                            <constraint firstAttribute="height" constant="21" id="qSQ-PA-TBs"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ubX-uA-Eis">
+                                        <rect key="frame" x="455" y="26" width="118" height="31"/>
+                                    </slider>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="5l9-Dw-gfh" firstAttribute="centerY" secondItem="Rlo-8b-aW1" secondAttribute="centerY" id="9as-fZ-9rl"/>
+                                    <constraint firstItem="5l9-Dw-gfh" firstAttribute="leading" secondItem="Rlo-8b-aW1" secondAttribute="leading" constant="30" id="chW-Jo-w2X"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="cEG-DI-X5z">
+                                <rect key="frame" x="10" y="154" width="580" height="446"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="separatorColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="sectionIndexColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -540,17 +563,17 @@
                                 <color key="sectionIndexTrackingBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="msgCell" textLabel="Hne-2T-jHG" style="IBUITableViewCellStyleDefault" id="1SY-Kb-s7Y">
-                                        <rect key="frame" x="0.0" y="22" width="568" height="44"/>
+                                        <rect key="frame" x="0.0" y="22" width="580" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1SY-Kb-s7Y" id="CnC-dm-vX6">
-                                            <rect key="frame" x="0.0" y="0.0" width="568" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="580" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Hne-2T-jHG">
-                                                    <rect key="frame" x="15" y="0.0" width="538" height="44"/>
+                                                    <rect key="frame" x="15" y="0.0" width="550" height="44"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -565,10 +588,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="cEG-DI-X5z" firstAttribute="top" secondItem="J66-3l-JD2" secondAttribute="bottom" id="1cu-HO-LDb"/>
-                            <constraint firstItem="cEG-DI-X5z" firstAttribute="trailing" secondItem="Tmz-ol-MxB" secondAttribute="trailingMargin" id="We1-Fn-160"/>
-                            <constraint firstItem="cEG-DI-X5z" firstAttribute="leading" secondItem="Tmz-ol-MxB" secondAttribute="leadingMargin" id="WgU-B0-ezV"/>
-                            <constraint firstItem="b6c-L8-Isz" firstAttribute="top" secondItem="cEG-DI-X5z" secondAttribute="bottom" id="vZX-Vt-jWj"/>
+                            <constraint firstItem="Rlo-8b-aW1" firstAttribute="top" secondItem="Tmz-ol-MxB" secondAttribute="top" constant="64" id="9md-5P-hIb"/>
+                            <constraint firstItem="HSe-60-MR8" firstAttribute="leading" secondItem="Tmz-ol-MxB" secondAttribute="leading" id="OJB-4S-mS0"/>
+                            <constraint firstItem="HSe-60-MR8" firstAttribute="top" secondItem="Tmz-ol-MxB" secondAttribute="top" id="PrE-ck-Nwa"/>
+                            <constraint firstAttribute="trailing" secondItem="cEG-DI-X5z" secondAttribute="trailing" constant="10" id="V3U-on-BuA"/>
+                            <constraint firstAttribute="trailing" secondItem="Rlo-8b-aW1" secondAttribute="trailing" constant="10" id="b7n-aa-3QY"/>
+                            <constraint firstAttribute="trailing" secondItem="HSe-60-MR8" secondAttribute="trailing" id="b91-0h-YcH"/>
+                            <constraint firstItem="Rlo-8b-aW1" firstAttribute="height" secondItem="HSe-60-MR8" secondAttribute="height" multiplier="0.15" id="bTL-nc-6gI"/>
+                            <constraint firstItem="b6c-L8-Isz" firstAttribute="top" secondItem="HSe-60-MR8" secondAttribute="bottom" id="dbZ-Rl-eGU"/>
+                            <constraint firstItem="b6c-L8-Isz" firstAttribute="top" secondItem="cEG-DI-X5z" secondAttribute="bottom" id="f80-oF-vdF"/>
+                            <constraint firstItem="cEG-DI-X5z" firstAttribute="top" secondItem="Rlo-8b-aW1" secondAttribute="bottom" id="knu-M9-8yn"/>
+                            <constraint firstItem="cEG-DI-X5z" firstAttribute="leading" secondItem="Tmz-ol-MxB" secondAttribute="leading" constant="10" id="lsS-kU-w6L"/>
+                            <constraint firstItem="Rlo-8b-aW1" firstAttribute="leading" secondItem="Tmz-ol-MxB" secondAttribute="leading" id="nzh-nn-Zj8"/>
                         </constraints>
                     </view>
                     <connections>
@@ -4788,6 +4819,9 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="GKF-mW-d3N" id="fBM-32-6ZN"/>
+                                        </connections>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jEL-Hq-Ohd">
                                         <rect key="frame" x="0.0" y="28" width="420" height="1"/>
@@ -5122,6 +5156,9 @@
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="XKm-VF-HsW" id="A2c-jB-QUF"/>
+                                        </connections>
                                     </textField>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3uL-gX-Kky">
                                         <rect key="frame" x="0.0" y="46" width="480" height="1"/>
@@ -5236,7 +5273,7 @@
                                                                 <action selector="showSheet:" destination="dxL-PS-4RH" eventType="touchUpInside" id="dg1-dT-TdZ"/>
                                                             </connections>
                                                         </button>
-                                                        <switch opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qsv-WM-j4s" customClass="UISwitch2" customModule="米居" customModuleProvider="target">
+                                                        <switch opaque="NO" tag="3" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="qsv-WM-j4s" customClass="UISwitch2" customModule="米居" customModuleProvider="target">
                                                             <rect key="frame" x="486" y="34" width="51" height="31"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="49" id="Q9f-yc-m9h"/>
