--- a/FameSmartApp/Base.lproj/Main.storyboard
+++ b/FameSmartApp/Base.lproj/Main.storyboard
@@ -544,13 +544,22 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ubX-uA-Eis">
-                                        <rect key="frame" x="455" y="26" width="118" height="31"/>
-                                    </slider>
+                                    <switch opaque="NO" tag="2" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wi6-0b-oRi">
+                                        <rect key="frame" x="515" y="30" width="51" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="49" id="NxY-Ik-ehC"/>
+                                            <constraint firstAttribute="height" constant="31" id="qfa-uh-5gz"/>
+                                        </constraints>
+                                        <connections>
+                                            <action selector="NoticOn:" destination="enu-Eo-e10" eventType="valueChanged" id="az0-op-ogN"/>
+                                        </connections>
+                                    </switch>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
+                                    <constraint firstItem="wi6-0b-oRi" firstAttribute="centerY" secondItem="Rlo-8b-aW1" secondAttribute="centerY" id="28x-nr-sU7"/>
                                     <constraint firstItem="5l9-Dw-gfh" firstAttribute="centerY" secondItem="Rlo-8b-aW1" secondAttribute="centerY" id="9as-fZ-9rl"/>
+                                    <constraint firstAttribute="trailing" secondItem="wi6-0b-oRi" secondAttribute="trailing" constant="20" id="Ghn-ni-D8F"/>
                                     <constraint firstItem="5l9-Dw-gfh" firstAttribute="leading" secondItem="Rlo-8b-aW1" secondAttribute="leading" constant="30" id="chW-Jo-w2X"/>
                                 </constraints>
                             </view>
@@ -4151,18 +4160,21 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loginpanel.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="K2L-ea-Bxq">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kdg-dA-JRV">
+                                <rect key="frame" x="0.0" y="172" width="600" height="428"/>
+                            </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="anv-OI-A7W">
                                 <rect key="frame" x="150" y="40" width="300" height="60"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" tag="300" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="144" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zh8-Ee-Flc">
                                         <rect key="frame" x="0.0" y="0.0" width="180" height="60"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                         <color key="textColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ug/M³" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIx-xF-OjY">
                                         <rect key="frame" x="183" y="20" width="90" height="30"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <color key="textColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
