--- a/FameSmartApp/Base.lproj/Main.storyboard
+++ b/FameSmartApp/Base.lproj/Main.storyboard
@@ -667,7 +667,7 @@
                                                     <constraint firstAttribute="width" constant="22" id="MFC-KS-Pg2"/>
                                                 </constraints>
                                             </imageView>
-                                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KVc-1l-rrt">
+                                            <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入用账号或手机号" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="KVc-1l-rrt">
                                                 <rect key="frame" x="85" y="9" width="335" height="19"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -718,7 +718,7 @@
                                                     <constraint firstAttribute="height" constant="24" id="prQ-WE-yiB"/>
                                                 </constraints>
                                             </imageView>
-                                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XhQ-cz-9HZ">
+                                            <textField opaque="NO" clipsSubviews="YES" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入1到6位字符的密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XhQ-cz-9HZ">
                                                 <rect key="frame" x="85" y="10" width="335" height="17"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -733,6 +733,10 @@
                                             </view>
                                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="密码：" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="unL-QD-EvI">
                                                 <rect key="frame" x="32" y="8" width="48" height="20"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="48" id="Dzx-zy-hKp"/>
+                                                    <constraint firstAttribute="height" constant="20" id="iZo-E0-OO6"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                                 <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -2322,18 +2326,18 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" id="O8p-sS-20h" customClass="UITableViewCell2" customModule="米居" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="cell" rowHeight="100" id="O8p-sS-20h" customClass="UITableViewCell2" customModule="米居" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="O8p-sS-20h" id="e4d-Kb-054">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="99" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="curtain_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="eZ1-5z-B0N">
-                                                    <rect key="frame" x="28" y="9" width="26" height="26"/>
+                                                <imageView userInteractionEnabled="NO" tag="99" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sound_icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="eZ1-5z-B0N">
+                                                    <rect key="frame" x="28" y="30" width="45" height="40"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="客厅窗帘开关" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gIs-uq-Te7">
-                                                    <rect key="frame" x="332" y="11" width="240" height="22"/>
+                                                    <rect key="frame" x="332" y="39" width="240" height="22"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -2341,13 +2345,13 @@
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
-                                                <constraint firstItem="eZ1-5z-B0N" firstAttribute="width" secondItem="e4d-Kb-054" secondAttribute="height" multiplier="0.6" id="2fn-cs-mpp"/>
+                                                <constraint firstItem="eZ1-5z-B0N" firstAttribute="width" secondItem="e4d-Kb-054" secondAttribute="height" multiplier="0.45" id="2fn-cs-mpp"/>
                                                 <constraint firstItem="gIs-uq-Te7" firstAttribute="width" secondItem="e4d-Kb-054" secondAttribute="width" multiplier="0.4" id="6i6-k1-YwB"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="gIs-uq-Te7" secondAttribute="trailing" constant="20" id="NSp-I0-PsN"/>
                                                 <constraint firstItem="eZ1-5z-B0N" firstAttribute="leading" secondItem="e4d-Kb-054" secondAttribute="leadingMargin" constant="20" id="ajf-Jt-jhP"/>
                                                 <constraint firstItem="gIs-uq-Te7" firstAttribute="centerY" secondItem="e4d-Kb-054" secondAttribute="centerY" id="sFq-6S-ImK"/>
                                                 <constraint firstItem="eZ1-5z-B0N" firstAttribute="centerY" secondItem="e4d-Kb-054" secondAttribute="centerY" id="xJb-4m-mQl"/>
-                                                <constraint firstItem="eZ1-5z-B0N" firstAttribute="height" secondItem="e4d-Kb-054" secondAttribute="height" multiplier="0.6" id="zNX-fo-bIM"/>
+                                                <constraint firstItem="eZ1-5z-B0N" firstAttribute="height" secondItem="e4d-Kb-054" secondAttribute="height" multiplier="0.4" id="zNX-fo-bIM"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -3804,7 +3808,7 @@
                                             <button opaque="NO" tag="11" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IUC-oR-0Jv">
                                                 <rect key="frame" x="312" y="12" width="208" height="36"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                <state key="normal" title="自定义" backgroundImage="tv_07-03.png">
+                                                <state key="normal" title="自定义2" backgroundImage="tv_07-03.png">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
@@ -3831,7 +3835,7 @@
                                             <button opaque="NO" tag="12" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ktO-cP-1BF">
                                                 <rect key="frame" x="0.0" y="12" width="208" height="36"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                <state key="normal" title="自定义" backgroundImage="tv_07-03.png">
+                                                <state key="normal" title="自定义3" backgroundImage="tv_07-03.png">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
@@ -3842,7 +3846,7 @@
                                             <button opaque="NO" tag="13" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vec-KW-cNk">
                                                 <rect key="frame" x="312" y="12" width="208" height="36"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                <state key="normal" title="自定义" backgroundImage="tv_07-03.png">
+                                                <state key="normal" title="自定义4" backgroundImage="tv_07-03.png">
                                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
@@ -4072,7 +4076,7 @@
                                     </button>
                                     <button opaque="NO" tag="7" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WfP-gc-vx4">
                                         <rect key="frame" x="0.0" y="160" width="208" height="30"/>
-                                        <state key="normal" title="自定义" backgroundImage="tv_07-03.png">
+                                        <state key="normal" title="自定义1" backgroundImage="tv_07-03.png">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -4083,7 +4087,7 @@
                                     </button>
                                     <button opaque="NO" tag="9" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cyL-M4-KAW">
                                         <rect key="frame" x="0.0" y="210" width="208" height="30"/>
-                                        <state key="normal" title="自定义" backgroundImage="tv_07-03.png">
+                                        <state key="normal" title="自定义3" backgroundImage="tv_07-03.png">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -4127,7 +4131,7 @@
                                     </button>
                                     <button opaque="NO" tag="8" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2N3-GB-x77">
                                         <rect key="frame" x="312" y="160" width="208" height="30"/>
-                                        <state key="normal" title="自定义" backgroundImage="tv_07-03.png">
+                                        <state key="normal" title="自定义2" backgroundImage="tv_07-03.png">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -4138,7 +4142,7 @@
                                     </button>
                                     <button opaque="NO" tag="10" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Dd-89-B6j">
                                         <rect key="frame" x="312" y="210" width="208" height="30"/>
-                                        <state key="normal" title="自定义" backgroundImage="tv_07-03.png">
+                                        <state key="normal" title="自定义4" backgroundImage="tv_07-03.png">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -6525,7 +6529,6 @@
         <image name="curtain_11.png" width="23" height="46"/>
         <image name="curtain_14.png" width="59" height="33"/>
         <image name="curtain_17.png" width="40" height="33"/>
-        <image name="curtain_icon.png" width="215" height="213"/>
         <image name="download.png" width="79" height="71"/>
         <image name="fame.png" width="184" height="183"/>
         <image name="gas_03.png" width="80" height="109"/>
@@ -6565,6 +6568,7 @@
         <image name="socket_03.png" width="113" height="95"/>
         <image name="socket_06.png" width="185" height="84"/>
         <image name="socket_17.png" width="96" height="40"/>
+        <image name="sound_icon.png" width="97" height="97"/>
         <image name="speech1.png" width="348" height="348"/>
         <image name="spinner_list_down.png" width="63" height="55"/>
         <image name="telphone.png" width="24" height="40"/>
